# 3D-Software-Renderer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  CreateVS2022Solution.bat  README.md  Software-Renderer.ilk  repopack-output.txt
assets/cerberus/: cerberus.txt
assets/chest/: chest.txt
assets/david/: david.txt
assets/firehydrant/: firehydrant.txt
assets/greek/: greek.txt
assets/heating/: heating.txt
assets/lantern/: lantern.txt
assets/material_test/: material_test.txt
assets/statue/: statue.txt
assets/teapot/: teapot.txt
include/: camera.h  display.h  drawing.h  engine.h  input.h  lights.h  model.h  renderer.h  scene.h  shader.h  texture.h
modules/: FindSDL2.cmake
src/: camera.cpp  display.cpp  drawing.cpp  engine.cpp  input.cpp  main.cpp  model.cpp  renderer.cpp  scene.cpp  texture.cpp
visualstudio/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Software-Renderer.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
visualstudio/Software-Renderer.dir/Debug/: Software-Renderer.exe.recipe  Software-Renderer.vcxproj.FileListAbsolute.txt
visualstudio/Software-Renderer.dir/Debug/Software.E16D2F26.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  Software-Renderer.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
visualstudio/Software-Renderer.dir/Release/: Software-Renderer.exe.recipe
visualstudio/Software-Renderer.dir/Release/Software.E16D2F26.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  Software-Renderer.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
visualstudio/assets/bunny/: bunny.txt
visualstudio/assets/firehydrant/: firehydrant.txt
visualstudio/assets/heating/: heating.txt
visualstudio/assets/lantern/: lantern.txt
visualstudio/assets/statue/: statue.txt
visualstudio/assets/teapot/: teapot.txt
visualstudio/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
visualstudio/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
visualstudio/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
visualstudio/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog
